--- a/css/component.css
+++ b/css/component.css
@@ -28,15 +28,15 @@
 	display: block;
 	position: relative;
 	padding: 15px 15px 15px 10px;
-	font-size: 16px;
-	line-height: 20px;
+	font-size: 20px;
+	line-height: 46px;
 	font-weight: 300;
 	color: #fff;
 	outline: none;
 }
 
 .no-touch .dl-menuwrapper li a:hover {
-	background: rgba(255,248,213,0.1);
+	background: rgba(255,248,213,0.9);
 }
 
 .dl-menuwrapper li.dl-back > a {
@@ -81,6 +81,10 @@
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
 	backface-visibility: hidden;
+	background-color: rgba(27, 31, 59, 0.8);
+	backdrop-filter: blur(4px);
+	-webkit-backdrop-filter: blur(4px);
+	-moz-backdrop-filter: blur(4px);
 	
 }
 
@@ -98,6 +102,7 @@
 	transform: translateY(0px);
 	z-index:-1;
 	backdrop-filter: blur(4px);
+	
 }
 
 /* Hide the inner submenus */
